--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="container">
 
       <h1><a href="index.html">Chris Wren</a></h1>
-      <h2 style="color:#fff">I'm <span class="typing" style="color:#12D640"></span></h2>
+      <h2 style="color:#fff">I am <span class="typing" style="color:#12D640"></span></h2>
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="#header"> <span>Home</span></a></li>
@@ -694,7 +694,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Coder", "Developer", "AI Enthusiast"],
+      strings: ["Director of Partnerships", "AAA Video Game Producer", "University Professor", "Professional"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
