--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Director of Partnerships", "AAA Video Game Producer", "University Professor", "Professional"],
+      strings: ["Director of Partnerships", "XR Prototyper", "AAA Video Game Producer", "University Professor", "Professional"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
